# MovieTracker

./: .gitignore  CMakeLists.txt  README.md  ToDo.txt
include/core/: AppStorage.hpp  ErrorMessages.hpp  ImportedFileValidator.hpp  OmdbSearch.hpp  SeasonUpdate.hpp  SeasonUpdateController.hpp  Title.hpp  TitleSearch.hpp
include/ui/: AssetsPaths.hpp  HelpDialog.hpp  HelpItems.hpp  IconButton.hpp  LibraryView.hpp  MainWindow.hpp  NotificationsCenter.hpp  RankingView.hpp  SearchResults.hpp  SettingsWindow.hpp  TextButton.hpp  TitleCard.hpp  TitleDetailView.hpp  TopBar.hpp
include/ui/bars/: AddBar.hpp  AppMenuBar.hpp  LibraryViewTopBar.hpp  TopBar.hpp
include/ui/buttons/: HoverButton.hpp  IconButton.hpp  IconTextButton.hpp  TextButton.hpp
include/ui/misc/: ElidedLabel.hpp  ErrorCard.hpp  HelpItems.hpp  SearchBar.hpp  Spinner.hpp  ToggleSwitch.hpp
include/utils/: AppPaths.hpp  AssetsPaths.hpp  JsonFileIO.hpp  Levenshtein.hpp  Palette.hpp  SortEnums.hpp  SvgUtils.hpp
scripts/: bundle-linux.sh  bundle.sh  format.sh  test.sh
src/: main.cpp
src/core/: AppStorage.cpp  ImportedFileValidator.cpp  OmdbSearch.cpp  SeasonUpdate.cpp  SeasonUpdateController.cpp  TitleSearch.cpp
src/ui/: HelpDialog.cpp  IconButton.cpp  LibraryView.cpp  MainWindow.cpp  NotificationsCenter.cpp  RankingView.cpp  SearchResults.cpp  SettingsWindow.cpp  Spinner.cpp  TextButton.cpp  TitleCard.cpp  TitleDetailView.cpp  TopBar.cpp
src/ui/bars/: AddBar.cpp  AppMenuBar.cpp  LibraryViewTopBar.cpp  TopBar.cpp
src/ui/buttons/: HoverButton.cpp  IconButton.cpp  IconTextButton.cpp  StreamingPlatformButton.cpp  TextButton.cpp
src/ui/misc/: ElidedLabel.cpp  ErrorCard.cpp  SearchBar.cpp  Spinner.cpp  ToggleSwitch.cpp
src/utils/: JsonFileIO.cpp
tests/: CMakeLists.txt  MANUAL_TESTING.md  main.cpp
tests/core/: TestAppStorage.cpp  TestImportedFileValidator.cpp  TestOmdbSearch.cpp  TestSeasonUpdate.cpp  TestSeasonUpdateController.cpp  TestTitleSearch.cpp
tests/ui/: TestHelpDialog.cpp  TestLibraryView.cpp  TestMainWindow.cpp  TestRankingView.cpp  TestSearchResults.cpp  TestSettingsWindow.cpp  TestTitleCard.cpp  TestTitleDetailView.cpp
tests/ui/bars/: TestAddBar.cpp  TestAppMenuBar.cpp  TestLibraryViewTopBar.cpp  TestTopBar.cpp
tests/ui/buttons/: TestHoverButton.cpp  TestIconButton.cpp  TestIconTextButton.cpp  TestStreamingPlatformButton.cpp  TestTextButton.cpp
tests/ui/misc/: TestAddStreamingPlatformDialog.cpp  TestElidedLabel.cpp  TestErrorCard.cpp  TestFlowWidget.cpp  TestSearchBar.cpp
tests/utils/: TestJsonFileIO.cpp  TestLevenshtein.cpp  TestSvgUtils.cpp
